update index file

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,8 +7,8 @@
     <title>Design Decision Framework</title>
     <!--<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/materialize.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/myStyles2.css" />
+    <link rel="stylesheet" href="https://design-decision-xai-framework.github.io/static/css/materialize.css" />
+    <link rel="stylesheet" type="text/css" href="https://design-decision-xai-framework.github.io/static/css/myStyles2.css" />
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
 
 </head>
@@ -26,7 +26,7 @@
 </nav>
 
 
-<h4 style="text-align: center">Design Decision Framework for AI Explanations</h4>
+<h4 style="text-align: center">Design Decision Framework for AI Explanations - Just wrote this</h4>
 
 <div class="row">
     <div class = "s12">
