--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
             <p style="font-size: 15px">
                 Kindly cite this research work using the bibtex below:</p>
 
-            <div class="information-panel">
+            <!--<div class="information-panel">-->
                 <div class="information-panel-content">
                     <pre style="width: 50%; margin-left: -150px">
                         @article{ smth,
@@ -69,7 +69,7 @@
                     </pre>
 
                 </div>
-            </div>
+            <!--</div>-->
 
 
         </div>
