--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -14,9 +14,13 @@
 </head>
 
 <body>
-<nav>
-    <div class="nav-wrapper">
-        <ul class="left hide-on-med-and-down">
+<nav style="padding:0px 10px;">
+
+    <div class="nav-wrapper" >
+        <a href="#" class="sidenav-trigger" data-target="mobile-nav">
+            <i class="material-icons">menu</i>
+        </a>
+        <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
             <li><a href="design_analysis.html">Analysis</a></li>
             <!--<li> <a href="our_design_process.html" class="active">Design decision process</a></li>-->
