--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -7,9 +7,10 @@
     <title>Design Decision Framework</title>
     <!--<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.1.min.js"></script>-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="../static/css/materialize.css" />
-    <link rel="stylesheet" type="text/css" href="../static/css/myStyles2.css" />
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>-->
+    <link rel="stylesheet" href="https://design-decision-xai-framework.github.io/static/css/materialize.css" />
+    <link rel="stylesheet" type="text/css" href="https://design-decision-xai-framework.github.io/static/css/myStyles2.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 </head>
 
