--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -706,4 +706,11 @@
 </div>
 
 </body>
+
+<script>
+    $(document).ready(function(){
+        $('.sidenav').sidenav();
+    });
+</script>
+
 </html>
