--- a/pages/index.html
+++ b/pages/index.html
@@ -61,17 +61,17 @@
             <p style="font-size: 15px">
                 Kindly cite this research work using the bibtex below:</p>
 
-            <!--<div class="information-panel">-->
-                <div class="information-panel-content">
-                    <pre style="width: 50%; margin-left: -150px">
-                        @article{ smth,
-                            author = {Anuyah, Oghenemaro and Fine, William and Metoyer, Ronald},
-                            title = {Design Decision Framework for AI Explanations},
-                            journal = {},
-                            year = {2021}
-                        }
+            <!--&lt;!&ndash;<div class="information-panel">&ndash;&gt;-->
+                <!--<div class="information-panel-content">-->
+                    <!--<pre style="width: 50%; margin-left: -150px">-->
+                        <!--@article{ smth,-->
+                            <!--author = {Anuyah, Oghenemaro and Fine, William and Metoyer, Ronald},-->
+                            <!--title = {Design Decision Framework for AI Explanations},-->
+                            <!--journal = {},-->
+                            <!--year = {2021}-->
+                        <!--}-->
 
-                    </pre>
+                    <!--</pre>-->
 
                 </div>
             <!--</div>-->
