--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -15,20 +15,25 @@
 </head>
 
 <body>
-<nav style="padding:0px 10px;">
 
-    <div class="nav-wrapper" >
-        <a href="#" class="sidenav-trigger" data-target="mobile-nav">
-            <i class="material-icons">menu</i>
-        </a>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
             <li><a href="design_analysis.html">Analysis</a></li>
-            <!--<li> <a href="our_design_process.html" class="active">Design decision process</a></li>-->
-            <!--<li><a href="https://anuyahmaro.github.io/trace_exp/pages/index_May10.html" target="_blank">Demo</a></li>-->
         </ul>
     </div>
 </nav>
+
+<ul class="sidenav" id="mobile-demo">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="design_analysis.html">Analysis</a></li>
+</ul>
+
+
+
+<!--</div>-->
 
 
 <div class="row">
