--- a/pages/index.html
+++ b/pages/index.html
@@ -12,24 +12,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-
 </head>
 
 <body>
-<nav style="padding:0px 10px;">
-
-    <div class="nav-wrapper" >
-        <a href="#" class="sidenav-trigger" data-target="mobile-nav">
-            <i class="material-icons">menu</i>
-        </a>
+<nav>
+    <div class="nav-wrapper">
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Home</a></li>
             <li><a href="design_analysis.html">Analysis</a></li>
-            <!--<li> <a href="our_design_process.html" class="active">Design decision process</a></li>-->
-            <!--<li><a href="https://anuyahmaro.github.io/trace_exp/pages/index_May10.html" target="_blank">Demo</a></li>-->
         </ul>
     </div>
 </nav>
+
+<ul class="sidenav" id="mobile-demo">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="design_analysis.html">Analysis</a></li>
+</ul>
 
 
 <div class="row">
