--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -83,11 +83,11 @@
 
 
         <table class="striped responsive-table">
-            <thead><tr><th title="Field #1">ID</th>
-                <th>Research paper details</th>
+            <thead><tr><th >ID</th>
+                <th >Research paper details</th>
                 <th>Year</th>
                 <th>Venue</th>
-                <th>Model task</th>
+                <th >Model task</th>
                 <th>Domain</th>
                 <th>Explanation representation</th>
                 <th>Target users</th>
