--- a/pages/index.html
+++ b/pages/index.html
@@ -45,11 +45,11 @@
 
         <div class="col s8 offset-s2">
             <!--<p style="margin-left: 10px;">-->
-            <p style="font-size: 17px">
+            <p style="font-size: 17px; font-weight: bold">
                 Research paper selection criteria:</p>
             <ul>
-                <li> <span class="material-icons" style="font-size: 10px">fiber_manual_record</span>&nbsp;&nbsp;&nbsp;HHH</li>
-                <li> <span class="material-icons" style="font-size: 10px">fiber_manual_record</span>&nbsp;&nbsp;&nbsp;MMM</li>
+                <li> <span class="material-icons" style="font-size: 10px">fiber_manual_record</span>&nbsp;&nbsp;&nbsp;An explanation interface was designed to explain a dataset or output of an AI model</li>
+                <li> <span class="material-icons" style="font-size: 10px">fiber_manual_record</span>&nbsp;&nbsp;&nbsp;Paper was published between the year 2016 and 2020</li>
             </ul>
             <!--</p>-->
 
@@ -57,7 +57,7 @@
 
         <div class="col s8 offset-s2">
             <!--<p style="margin-left: 10px;">-->
-            <p style="font-size: 15px">
+            <p style="font-size: 17px; font-weight: bold">
                 Kindly cite this research work using the bibtex below:</p>
 
             <!--&lt;!&ndash;<div class="information-panel">&ndash;&gt;-->
