--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -84,7 +84,7 @@
 
         <table class="striped responsive-table">
             <thead><tr><th title="Field #1">ID</th>
-                <th title="Field #2">Title</th>
+                <th title="Field #2" style="width: 250px">Title</th>
                 <th title="Field #3">Year</th>
                 <th title="Field #4">Venue</th>
                 <th title="Field #5">Model task</th>
@@ -98,7 +98,7 @@
             </tr></thead>
             <tbody><tr>
                 <td align="right">1</td>
-                <td>Explainable outfit recommendation with joint outfit matching and comment generation (https://ieeexplore.ieee.org/abstract/document/8669792)</td>
+                <td><a href="https://ieeexplore.ieee.org/abstract/document/8669792" target="_blank"> Explainable outfit recommendation with joint outfit matching and comment generation</a></td>
                 <td align="right">2019</td>
                 <td>IEEE Transactions on Knowledge and Data Engineering</td>
                 <td>ML-based neural outfit recommendation (NOR) model</td>
@@ -112,7 +112,7 @@
             </tr>
             <tr>
                 <td align="right">2</td>
-                <td>Interpretable artificial intelligence framework for COVID-19 screening on chest X-rays (https://www.spandidos-publications.com/10.3892/etm.2020.8797)</td>
+                <td><a href="https://www.spandidos-publications.com/10.3892/etm.2020.8797" target="_blank">Interpretable artificial intelligence framework for COVID-19 screening on chest X-rays</a></td>
                 <td align="right">2020</td>
                 <td>Experimental and Therapeutic Medicine</td>
                 <td>CNN model for predicting results of COVID-19 screening on chest X-rays</td>
@@ -126,7 +126,7 @@
             </tr>
             <tr>
                 <td align="right">3</td>
-                <td>RSM: An explainable predictive sales route selector (https://ieeexplore.ieee.org/abstract/document/8955508)</td>
+                <td><a href="https://ieeexplore.ieee.org/abstract/document/8955508" target="_blank">RSM: An explainable predictive sales route selector</a></td>
                 <td align="right">2019</td>
                 <td>International Conference on Data Mining Workshops</td>
                 <td>Recommend optimal sales route to business firms</td>
@@ -140,7 +140,7 @@
             </tr>
             <tr>
                 <td align="right">4</td>
-                <td>Visual interaction with deep learning models through collaborative semantic inference (Gerhmann et al)</td>
+                <td><a href="https://ieeexplore.ieee.org/document/8805457" target="_blank">Visual interaction with deep learning models through collaborative semantic inference</a></td>
                 <td align="right">2019</td>
                 <td>IEEE transactions on visualization and computer graphics</td>
                 <td>ML-based neural text summarization model</td>
@@ -149,12 +149,12 @@
                 <td>A person trying to collaboratively write a summary of an article </td>
                 <td>No</td>
                 <td>No</td>
-                <td>NLP / Text structure </td>
+                <td>Scientific textual data</td>
                 <td>Summarized text prediction</td>
             </tr>
             <tr>
                 <td align="right">5</td>
-                <td>What is relevant in a text document?&quot;: An interpretable machine learning approach (Arras et al.)</td>
+                <td><a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0181142" target="_blank"> "What is relevant in a text document?": An interpretable machine learning approach</a></td>
                 <td align="right">2017</td>
                 <td>PloS one</td>
                 <td>CNN model for classifying text documents</td>
@@ -163,16 +163,16 @@
                 <td>N/A</td>
                 <td>No</td>
                 <td>No</td>
-                <td>NLP / Text structure </td>
+                <td>News textual data</td>
                 <td>Text classification</td>
             </tr>
             <tr>
                 <td align="right">6</td>
-                <td>RetainVis: Visual Analytics with Interpretable and Interactive Recurrent Neural Networks on Electronic Medical Records  (https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8440842)</td>
+                <td><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8440842" target="_blank">RetainVis: Visual Analytics with Interpretable and Interactive Recurrent Neural Networks on Electronic Medical Records </a></td>
                 <td align="right">2018</td>
                 <td>IEEE transactions on visualization and computer graphics</td>
                 <td>RNN-based model for medical diagnosis prediction, given patients&#39; prior medical visits</td>
-                <td>Health care</td>
+                <td>Healthcare</td>
                 <td>Visualization charts (bar charts, scatter plot, area chart, and circle chart)</td>
                 <td>Physicians,<br/>health professionals, and medical researchers</td>
                 <td>No (only identified target tasks users)</td>
@@ -182,7 +182,7 @@
             </tr>
             <tr>
                 <td align="right">7</td>
-                <td>Real Time Image Saliency for Black Box Classifiers (https://papers.nips.cc/paper/7272-real-time-image-saliency-for-black-box-classifiers.pdf)</td>
+                <td><a href="https://papers.nips.cc/paper/7272-real-time-image-saliency-for-black-box-classifiers.pdf" target="_blank">Real Time Image Saliency for Black Box Classifiers</a></td>
                 <td align="right">2017</td>
                 <td> Advances in Neural Information Processing Systems</td>
                 <td>Image saliency prediction model for image classification.</td>
@@ -191,12 +191,12 @@
                 <td>N/A</td>
                 <td>No</td>
                 <td>No</td>
-                <td>Images of animals</td>
+                <td>Animal images</td>
                 <td>Image classification</td>
             </tr>
             <tr>
                 <td align="right">8</td>
-                <td>Parallel embeddings: a visualization technique for contrasting learned representations (https://dl.acm.org/doi/pdf/10.1145/3377325.3377514)</td>
+                <td><a href="https://dl.acm.org/doi/pdf/10.1145/3377325.3377514" target="_blank">Parallel embeddings: a visualization technique for contrasting learned representations</a></td>
                 <td align="right">2020</td>
                 <td>IUI</td>
                 <td>ML model selection/comparison</td>
@@ -210,7 +210,7 @@
             </tr>
             <tr>
                 <td align="right">9</td>
-                <td>&quot; Why should I trust you?&quot; Explaining the predictions of any classifier (https://dl.acm.org/doi/abs/10.1145/2939672.2939778)</td>
+                <td><a href="https://dl.acm.org/doi/abs/10.1145/2939672.2939778" target="_blank">Why should I trust you?&quot; Explaining the predictions of any classifier</a></td>
                 <td align="right">2016</td>
                 <td>KDD</td>
                 <td>ML-based model for classifying data instances</td>
@@ -224,7 +224,7 @@
             </tr>
             <tr>
                 <td align="right">10</td>
-                <td>A Diagnostic Study of Explainability Techniques for Text Classification (https://www.aclweb.org/anthology/2020.emnlp-main.263.pdf)</td>
+                <td><a href="https://www.aclweb.org/anthology/2020.emnlp-main.263.pdf" target="_blank">A Diagnostic Study of Explainability Techniques for Text Classification</a></td>
                 <td align="right">2020</td>
                 <td>EMNLP</td>
                 <td>ML/NN-based model for classifying texts</td>
@@ -238,7 +238,7 @@
             </tr>
             <tr>
                 <td align="right">11</td>
-                <td>Unsupervised, Knowledge-Free, and Interpretable<br/>Word Sense Disambiguation (https://www.aclweb.org/anthology/D17-2016.pdf)</td>
+                <td><a href="https://www.aclweb.org/anthology/D17-2016.pdf" target="_blank">Unsupervised, Knowledge-Free, and Interpretable Word Sense Disambiguation </a></td>
                 <td align="right">2017</td>
                 <td>EMNLP</td>
                 <td>ML model for word sense disambiguation</td>
@@ -252,129 +252,129 @@
             </tr>
             <tr>
                 <td align="right">12</td>
-                <td>Understanding Black-box Predictions via Influence Functions (https://arxiv.org/pdf/1703.04730.pdf)</td>
+                <td><a href="https://arxiv.org/pdf/1703.04730.pdf" target="_blank">Understanding Black-box Predictions via Influence Functions</a></td>
                 <td align="right">2017</td>
                 <td>ICML</td>
-                <td>Trace a model’s prediction through the learning algorithm and back to its training data</td>
+                <td>ML-based model for classifying images</td>
                 <td>Natural language processing</td>
                 <td>Example</td>
                 <td>N/A</td>
                 <td>No</td>
                 <td>No</td>
-                <td> </td>
-                <td> </td>
+                <td>Animal images</td>
+                <td>Image classification</td>
             </tr>
             <tr>
                 <td align="right">13</td>
-                <td>Decision Tree Visualization for High-Dimensional Numerical Data</td>
-                <td align="right">2018</td>
-                <td>SNAMS</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td><a href="https://ieeexplore.ieee.org/document/9086281" target="_blank">ExplainExplore: Visual Exploration of Machine Learning Explanations</a></td>
+                <td align="right">2020</td>
+                <td>PacificVis</td>
+                <td> Classification model to predict the effectiveness of a debt-collection<br/>operation</td>
+                <td>Business</td>
+                <td>Visualization</td>
+                <td>Data scientists (experts)</td>
+                <td>No</td>
+                <td>Yes</td>
+                <td>Debt management</td>
+                <td>Classification</td>
             </tr>
             <tr>
                 <td align="right">14</td>
-                <td>ExplainExplore: Visual Exploration of Machine Learning Explanations</td>
-                <td align="right">2020</td>
-                <td>PacificVis</td>
-                <td> </td>
-                <td> </td>
-                <td>Visualizations</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td><a href="https://ieeexplore.ieee.org/document/8827944" target="_blank">ProtoSteer: Steering Deep Sequence Model with Prototypes</a></td>
+                <td align="right">2019</td>
+                <td>IEEE Transactions on visualization and computer graphics</td>
+                <td>Sequence model for using information from the past to determine future prediction</td>
+                <td>Natural language processing</td>
+                <td>Saliency attention, multiple visualizations</td>
+                <td>Data scientists (experts)</td>
+                <td>Yes</td>
+                <td>Yes</td>
+                <td>Product reviews (textual)</td>
+                <td>Sentiments Prediction</td>
             </tr>
             <tr>
                 <td align="right">15</td>
-                <td>ProtoSteer: Steering Deep Sequence Model with Prototypes</td>
-                <td align="right">2020</td>
-                <td>IEEE Transactions on Visualization and Computer Graphics</td>
-                <td> </td>
-                <td> </td>
-                <td>Interactive visualizations</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td><a href="https://www.aclweb.org/anthology/W18-2702.pdf" target="_blank">A Shared Attention Mechanism for Interpretation of Neural Automatic Post-Editing Systems</a></td>
+                <td align="right">2018</td>
+                <td>ACL</td>
+                <td>ML model for translating machine encoded sentences</td>
+                <td>Natural language processing</td>
+                <td>Feature attribution</td>
+                <td>N/A</td>
+                <td>No</td>
+                <td>No</td>
+                <td>English-German translation text for the IT domain</td>
+                <td>Text translation</td>
             </tr>
             <tr>
                 <td align="right">16</td>
-                <td>But why?” Understanding explainable artificial intelligence. (https://dl.acm.org/doi/pdf/10.1145/3313107)</td>
-                <td align="right">2019</td>
-                <td>XRDS</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td><a href="https://openreview.net/pdf?id=rkRwGg-0Z" target="_blank">Beyond Word Importance: Contextual Decomposition to Extract Interactions from LSTMS</a></td>
+                <td align="right">2018</td>
+                <td>ICLR</td>
+                <td>Sentiment analysis</td>
+                <td>Natural language processing</td>
+                <td>Feature attribution (Saliency heat map)</td>
+                <td>N/A</td>
+                <td>No</td>
+                <td>No</td>
+                <td>Product reviews (textual)</td>
+                <td>Sentiments Prediction</td>
             </tr>
             <tr>
                 <td align="right">17</td>
-                <td>Designing Theory-Driven User-Centric Explainable AI</td>
+                <td><a href="https://dl.acm.org/doi/abs/10.1145/3290605.3300831" target="_blank">Designing Theory-Driven User-Centric Explainable AI</a></td>
                 <td align="right">2019</td>
                 <td>CHI</td>
-                <td> </td>
+                <td>ML model for predicting a patient&#39;s medical result</td>
                 <td>Healthcare</td>
-                <td>Interactive visualizations</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td>Visualization</td>
+                <td>Clinicians (medical experts)</td>
+                <td>Yes</td>
+                <td>Yes</td>
+                <td>Medical diagnosis information</td>
+                <td>Medical diagnosis prediction</td>
             </tr>
             <tr>
                 <td align="right">18</td>
-                <td>A Grounded Interaction Protocol for Explainable Artificial Intelligence.</td>
+                <td><a href="https://dl.acm.org/doi/abs/10.1145/3308558.3314119" target="_blank">XFake: Explainable Fake News Detector with Visualizations</a></td>
                 <td align="right">2019</td>
-                <td>AAMAS</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td>The Webconf</td>
+                <td>ML model for fake news detection</td>
+                <td>Natural language processing</td>
+                <td>Feature attribution (Saliency heat map)</td>
+                <td>N/A</td>
+                <td>No</td>
+                <td>No (Mechanical turk evaluation with users)</td>
+                <td>Political news</td>
+                <td>Fake news detection</td>
             </tr>
             <tr>
                 <td align="right">19</td>
-                <td>What Do People Really Want When They Say They Want “Explainable AI?</td>
-                <td align="right">2020</td>
-                <td>CHI</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td><a href="https://arxiv.org/abs/1904.05419" target="_blank">FAIRVIS: Visual Analytics for Discovering Intersectional Bias in Machine Learning</a></td>
+                <td align="right">2019</td>
+                <td>IEEE transactions on visualization and computer graphics</td>
+                <td>ML model for real-world prediction of biases</td>
+                <td>Justice</td>
+                <td>Multiple interactive visualizations (e.g., bar charts and area charts)</td>
+                <td>Domain experts (data scientists) and non-experts</td>
+                <td>No</td>
+                <td>Yes</td>
+                <td>Data with sensitive attributes such as age, race, etc</td>
+                <td>Bias prediction</td>
             </tr>
             <tr>
                 <td align="right">20</td>
-                <td>Designing accessible, explainable AI (XAI) experiences</td>
+                <td><a href="https://www.nature.com/articles/s41467-020-17431-x" target="_blank">Explainable artificial intelligence model to predict acute critical illness from electronic health records | Nature Communications</a></td>
                 <td align="right">2020</td>
-                <td>SIGACCESS</td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
-                <td> </td>
+                <td>Nature communications</td>
+                <td>ML model for predicting the chances of future health problems based on patient records<br/></td>
+                <td>Healthcare</td>
+                <td>Interactive visualizations (scatter plots, bar charts)</td>
+                <td>Clinicians (implied)</td>
+                <td>No</td>
+                <td>No</td>
+                <td>Medical diagnosis information</td>
+                <td>Medical diagnosis prediction</td>
             </tr>
             </tbody></table>
 
