update index info

--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -47,6 +47,10 @@
                 We analyzed the following information in each research article: explanation representation form, target users, if the authors designed the explanation
                 with users, and if the explanations were evaluated with users.
             </p>
+            <p style="font-size: 17px">
+                We also map each paper to different domains, explanation and data domain, which is useful for identifying user
+                questions to design the explanations for. We provide more details on these data domains in our paper.
+            </p>
             <!--</p>-->
 
         </div>
