update index info

--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -48,10 +48,16 @@
                 with users, and if the explanations were evaluated with users.
             </p>
             <p style="font-size: 17px">
-                We also map each paper to different domains, explanation and data domain, which is useful for identifying user
-                questions to design the explanations for. We provide more details on these data domains in our paper.
+                We also mapped each paper to different domains, <b>explanation</b> and <b>data</b> domain, which is should guide designers in identifying user
+                questions to design the explanations for. We provide more details on these domains in our paper.
             </p>
             <!--</p>-->
+            <p style="font-size: 17px">
+                <b>Contribution:</b> We understand that the papers analyzed is a small subset compared to the pool of research conducted in the area of explanation design.
+                As we progress in our research, we will subsequently update this list with more research articles and to reflect all of the phases of our proposed explanation design framework.
+                We also welcome suggestions regarding papers to add to this list (please <a href="mailto:maroanuyah@gmail.com">email us</a>). Thank you!<br>
+            </p>
+            <!--<
 
         </div>
 
@@ -88,17 +94,17 @@
 
         <table class="striped responsive-table">
             <thead><tr><th title="Field #1">ID</th>
-                <th title="Field #2" style="width: 250px">Title</th>
-                <th title="Field #3">Year</th>
-                <th title="Field #4">Venue</th>
-                <th title="Field #5">Model task</th>
-                <th title="Field #6">Domain</th>
-                <th title="Field #7">Explanation representation</th>
-                <th title="Field #8">Target users</th>
-                <th title="Field #9">Designed with target users</th>
-                <th title="Field #10">Evaluated design with target users</th>
-                <th title="Field #11">Data domain</th>
-                <th title="Field #12">Explanation domain</th>
+                <th title="Title" style="width: 250px">Title</th>
+                <th title="Year">Year</th>
+                <th title="Venue">Venue</th>
+                <th title="Model task">Model task</th>
+                <th title="Domain">Domain</th>
+                <th title="Explanation representation">Explanation representation</th>
+                <th title="Target users">Target users</th>
+                <th title="Designed with target user">Designed with target users</th>
+                <th title="Evaluated design with target users">Evaluated design with target users</th>
+                <th title="Data domain">Data domain</th>
+                <th title="Explanation domain">Explanation domain</th>
             </tr></thead>
             <tbody><tr>
                 <td align="right">1</td>
