--- a/pages/index.html
+++ b/pages/index.html
@@ -38,7 +38,7 @@
 
             <p style="font-size: 17px">
                 We present in this web page, an analysis of a number of existing explanation interfaces designed for Artificial Intelligent Systems. For more details about
-                this work, see our paper "Design Decision Framework for AI Explanations", submitted to the MCAI Workshop.</p>
+                this work, see our paper "Design Decision Framework for AI Explanations", submitted to the <a href="https://ucai-sig.org/events/ucai21/call/">UCAI Workshop.</a>.</p>
             <!--</p>-->
 
         </div>
