update index info

--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -55,7 +55,7 @@
             <p style="font-size: 17px">
                 <b>Contribution:</b> We understand that the papers analyzed is a small subset compared to the pool of research conducted in the area of explanation design.
                 As we progress in our research, we will subsequently update this list with more research articles and to reflect all of the phases of our proposed explanation design framework.
-                We also welcome suggestions regarding papers to add to this list (please <a href="mailto:maroanuyah@gmail.com">email us</a>). Thank you!<br>
+                We also welcome suggestions regarding papers to add to this list (please <a href="mailto:design.decision.framework@gmail.com">email us</a>). Thank you!<br>
             </p>
             <!--<
 
