--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -48,8 +48,9 @@
                 with users, and if the explanations were evaluated with users.
             </p>
             <p style="font-size: 17px">
-                We also mapped each paper to different domains, <b>explanation</b> and <b>data</b> domain, which is should guide designers in identifying user
-                questions to design the explanations for. We provide more details on these domains in our paper.
+                We also mapped each paper to different domains, <b>explanation</b> and <b>data</b>. It is important for designers to identify user questions related to both of these
+                domains, as it would guide them towards identifying "user needs" around the explanation design. Questions related to the data domain refers to inquiries about data that
+                is relevant to the problem space of the AI model. On the other hand, questions pertaining to the explanation domain refers to inquiries about the AI model's decision. We provide more details on these domains in our paper.
             </p>
             <!--</p>-->
             <p style="font-size: 17px">
