update index info

--- a/pages/design_analysis.html
+++ b/pages/design_analysis.html
@@ -49,7 +49,7 @@
             </p>
             <p style="font-size: 17px">
                 We also mapped each paper to different domains, <b>explanation</b> and <b>data</b>. It is important for designers to identify user questions related to both of these
-                domains, as it would guide them towards identifying "user needs" around the explanation design. Questions related to the data domain refers to inquiries about data that
+                domains, as it would guide them towards identifying "user needs" that would inform the explanation design. Questions related to the data domain refers to inquiries about data that
                 is relevant to the problem space of the AI model. On the other hand, questions pertaining to the explanation domain refers to inquiries about the AI model's decision. We provide more details on these domains in our paper.
             </p>
             <!--</p>-->
